--- a/sass/blocks/_media.scss
+++ b/sass/blocks/_media.scss
@@ -116,6 +116,9 @@
             &__paris {
                 padding-bottom: 35px;
             }
+            &__parise {
+                padding-bottom:53px;
+            }
         }
     }
     .skill {
@@ -208,6 +211,12 @@
             }
             &__paris {
                 padding-bottom:54px;
+            }
+            &__parise {
+                padding-bottom:64px;
+            }
+            &__none {
+                padding-bottom: 40px;
             }
         }
     }
